written readme, added some really basic state management that triggers rerenders

--- a/source/components/card/card.html
+++ b/source/components/card/card.html
@@ -14,12 +14,14 @@
     </style>
 
     <div class="card-bottom">
-        <h1>{{card-name}}</h1>
+        <h1>{{cardName}}</h1>
 
         <a href="{{to}}">
             GO
         </a>
     </div>
+
+    <p>{{clickedText}}</p>
 
     <slot></slot>
 </div>
