--- a/source/components/header/header.html
+++ b/source/components/header/header.html
@@ -15,6 +15,16 @@
 
             box-sizing: border-box;
         }
+
+        a.logo {
+            text-decoration: none;
+            color: black;
+            transition: color var(--transition-quick);
+        }
+
+        a.logo:hover {
+            color: gray;
+        }
     </style>
-    <a href="/"><h2>my cool website</h2></a>
+    <a href="/" class="logo"><h2>my cool website</h2></a>
 </header>
