--- a/source/styles/customProperties.css
+++ b/source/styles/customProperties.css
@@ -36,6 +36,7 @@ html {
 
   /* shadow */
   --shadow: 0 2px 12px rgba(0, 0, 0, 0.1);
+  --shadow-big: 0 2px 20px rgba(0, 0, 0, 0.18);
 
   /* font-sizes */
   --base-font-size: 14px;
