added a bit more to readme on render shortcomings

--- a/source/styles/customProperties.css
+++ b/source/styles/customProperties.css
@@ -15,7 +15,7 @@ html {
   --colour-accent: blue;
   --colour-accent-secondary: red;
 
-  --colour-background: --white;
+  --colour-background: var(--white);
 
   /* screen sizes */
   --screen-size-tablet: 1024px;
